--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll"
+    "test": "jest --watchAll --verbose --coverage"
   },
   "keywords": [],
   "author": "",
@@ -16,12 +16,14 @@
     "debug": "^4.3.3",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
+    "express-jwt": "^6.1.0",
     "helmet": "^4.6.0",
     "joi": "^17.5.0",
     "joi-objectid": "^4.0.2",
     "joi-password-complexity": "^5.1.0",
     "joi-validate-partial": "^1.0.3",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.0.5",
     "lodash": "^4.17.21",
     "mongoose": "^6.1.3",
     "morgan": "^1.10.0",
@@ -29,6 +31,9 @@
     "winston-mongodb": "^5.0.7"
   },
   "devDependencies": {
-    "jest": "^27.4.7"
+    "jest": "^27.4.7",
+    "mock-jwks": "^1.0.1",
+    "request": "^2.88.2",
+    "supertest": "^6.2.1"
   }
 }
